--- a/Basic-JavaScript/01-Introduction/03-R&D_Tasks/01R&D_Tasks.html
+++ b/Basic-JavaScript/01-Introduction/03-R&D_Tasks/01R&D_Tasks.html
@@ -36,7 +36,32 @@
     </ul>
     <p>Example: Netflix, PayPal use Node.js.</p>
 
+    <hr>
+    <h3>Task-3 Search “Who created JavaScript?” and write the answer.</h3>
+    <p>=>JavaScript was created by Brendan Eich in 1995</p>
+    <hr>
+    <h3>Task-6 Research difference between HTML, CSS, JS.</h3>
+    <h4>1.HTML</h4>
+    <p>HTML = Skeleton of a webpage</p>
+    <ul>
+        <li>Stands for HyperText Markup Language</li>
+        <li>Used to create the structure of a webpage</li>
+        <li>Defines headings, paragraphs, images, buttons, forms, etc.</li>
+    </ul>
 
+    <h4>2.CSS</h4>
+    <p>CSS = Design/Look of the webpage</p>
+    <ul>
+        <li>Stands for Cascading Style Sheets</li>
+        <li>Used to style the HTML</li>
+        <li>Controls colors, fonts, layout, spacing, animations, etc.</li>
+    </ul>
+    <h4>3.JS</h4>
+    <p>JavaScript = Brain/Behavior of the webpage</p>
+    <ul>
+        <li>Makes the webpage interactive</li>
+        <li>Used for actions like clicking buttons, showing popups, sliding menus, calculations, etc.</li>
+    </ul>
 
 </body>
 
