--- a/Basic-JavaScript/02-BOM/01_task.html
+++ b/Basic-JavaScript/02-BOM/01_task.html
@@ -18,6 +18,7 @@
     <h3>Task 3 : Build a page that redirects the user to another URL after 5 seconds (use setTimeout + location.href).
     </h3>
 
+    <button onclick="Kavy()">youtube</button>
 
 
     <h3>Task 4 : Ask the user for two numbers using prompt(), add them, and show the result using alert().</h3>
@@ -31,10 +32,14 @@
 
         // Task 3
 
-        // setTimeout(() => {
-        //     location.href 
-        // }, 5000);
+        setTimeout(
+        function Kavy() {
+        let abc = window.location.href = "https://www.youtube.com/";  
+        },7000);
 
+        // setTimeout(() => {
+            
+        // }, timeout);
         // Task 4
 
         // let number = prompt("Enter Two Number");
