--- a/Basic-JavaScript/04-DataTypes/01Task.html
+++ b/Basic-JavaScript/04-DataTypes/01Task.html
@@ -84,30 +84,30 @@
 
         //Task - 4
 
-        // let user = prompt("Enter a Rollnumber");
-        // Rollnumber = Number(user);
-        // // console.log(Rollnumber);
+        let user = prompt("Enter a Rollnumber");
+        Rollnumber = Number(user);
+        console.log(Rollnumber);
 
 
-        // if (!isNaN(Rollnumber)) {
-        //     console.log("Valid number:", Rollnumber);
-        // } else {
-        //     console.log("Invalid number! Please enter a numeric value.");
-        // }
+        if (!isNaN(Rollnumber)) {
+            console.log("Valid number:", Rollnumber);
+        } else {
+            console.log("Invalid number! Please enter a numeric value.");
+        }
 
         //Task - 5
 
-        let a = "kavy";         //string
-        let b = 7;              //number
-        let c = true;           //boolean
+        // let a = "kavy";         //string
+        // let b = 7;              //number
+        // let c = true;           //boolean
 
-        console.log(a,b,c);
+        // console.log(a,b,c);
 
-        a = 7;
-        b = "kavy";
-        c = "true or false?";
+        // a = 7;
+        // b = "kavy";
+        // c = "true or false?";
 
-        console.log(a,b,c);
+        // console.log(a,b,c);
         
         
 
