--- a/Basic-JavaScript/08-Loops/02_3Do...WhileLoop_Task.html
+++ b/Basic-JavaScript/08-Loops/02_3Do...WhileLoop_Task.html
@@ -53,11 +53,11 @@
 
         //15. Ask the loop to run at least once even if the number is 0 (demonstrate do...while behavior).
 
-        let num2 = 0;
-        do {
-            console.log("hello");
+        // let num2 = 0;
+        // do {
+        //     console.log("hello");
             
-        } while (num2>0);
+        // } while (num2>0);
 
 
     </script>
