--- a/Basic-JavaScript/01-Introduction/index.html
+++ b/Basic-JavaScript/01-Introduction/index.html
@@ -11,9 +11,25 @@
 
     <h1>Introduction in JavaScript</h1>
 
-    <h2>What is JavaScript</h2>
+    <h2>What is JavaScript ?</h2>
+
+    <p>=>JavaScript is a high level interprited programing language used to crate intrective and dynamic web pages.</p>
+    <p>=>It runs directly in the browser.</p>
+    <p>=>JavaScript is a Event Based Programming Language.</p>
+    <p>=>It can Manipluate(Modify -> Dynamic In Nature) HTML & CSS.</p>
+    <p>=>JavaScript is a Forgiving Language</p>
+
+    <p>Different engines have different “codenames”. For example:</p>
+    <ul>
+        <li>V8 - in Chrome, Opera and Edge.</li>
+        <li>SpiderMonkey - in Firefox.</li>
+        <li>There are other codenames like “Chakra” for IE, “JavaScriptCore”,
+            “Nitro” and “SquirrelFish” for Safari, etc.</li>
+    </ul>
+
     
-    
+
+
 </body>
 
 </html>
