--- a/Basic-JavaScript/08-Loops/02_2WhileLoop_Task.html
+++ b/Basic-JavaScript/08-Loops/02_2WhileLoop_Task.html
@@ -35,16 +35,16 @@
 
         //9. Count how many digits are in a given number.
 
-        let num3 = prompt("Enter Your Mo.Number..")
-        let count = 0;
-        let a = 0;
+        // let num3 = prompt("Enter Your Mo.Number..")
+        // let count = 0;
+        // let a = 0;
 
-        while (a <= num3.length) {
+        // while (a <= num3.length) {
 
-            count++;
-            a++;
-        }
-        console.log(count);
+        //     count++;
+        //     a++;
+        // }
+        // console.log(count);
 
 
         // let num = 12345;  // given number
