--- a/Basic-JavaScript/09-Funcition/01Task.html
+++ b/Basic-JavaScript/09-Funcition/01Task.html
@@ -45,25 +45,24 @@
 
         // Task - 3
 
-        let str = prompt("Enter Your Name");
-        let count = 0;
-        // let vowels = ;
-        // let vowels_split=vowels.split("")
+        // let str = prompt("Enter Your Name");
+        // let count = 0;
+        // let vowels = ["a","e","i","o","u","A","E","I","O","U"];
+        // // let vowels_split=vowels.split("")
 
 
-        function countThevowels() {
+        // function countThevowels() {
 
-            for (let i = 0; i < str.length; i++) {
-                if (str[i].includes("a","e","i","o","u")) {
-                    count++;
+        //     for (let i = 0; i < str.length; i++) {
+        //         if (str.includes( vowels[i])) {
+        //             count++;
+        //         }
 
-                }
+        //     }
+        //     console.log(count);
+        // }
 
-            }
-            console.log(count);
-        }
-
-        countThevowels();
+        // countThevowels();
 
         // Task - 4
 
@@ -91,18 +90,61 @@
 
         // arr();
 
-        //Task = 6
+        //Task - 6
 
 
-        // Task = 7
+        // Task - 7
 
-        // let num2 = 1;
+        // let num2 = 97;
 
         // function prime() {
-        //     if (num2 == 1 || num2 == 3 || num2 ==  ) {
-                
+        //     for (let i = 3; i <= Math.sqrt(num2); i++) {
+        //         if (num2 <= 1) {
+        //             console.log("false");
+        //         } else if (num2 % 2 == 0) {
+        //             console.log("false");
+        //         } else if (num2 % i === 0) {
+        //             console.log("false");
+        //         }
+        //         console.log("True");
+
         //     }
         // }
+
+        // prime();
+
+        // let num = 4;
+        // function isPrime() {
+        //     if (num <= 1) {
+        //         console.log("false");
+        //     }
+
+        //     if (num === 2) {
+        //         console.log("true");
+
+        //     }
+        //     for (let i = 3; i <= Math.sqrt(num); i++) {
+        //         if (num % i === 0) {
+        //             console.log("false");
+        //         }
+        //     }
+        //     console.log("true");
+        // }
+        
+        // isPrime();
+
+        //Task - 10
+
+        // function d() {
+        //     for (let i = 0; i < 10; i++) {
+        //         for (let j = 1; j < i; j++) {
+        //             document.write("*")
+        //         }
+        //         document.write("<br/>");
+        //     }
+        // }
+
+        // d();
 
     </script>
 </body>
