--- a/Basic-JavaScript/10-Arrey Methods/01Task.html
+++ b/Basic-JavaScript/10-Arrey Methods/01Task.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arrey Methodes</title>
 </head>
 <body>
     <script>
@@ -67,12 +67,35 @@
         
         //Task - 21
         
-        let arr8 = [10,20,30,40,50];
-        console.log(arr8.fill("Patel", 2 ,4));
-        console.log(arr8);
+        // let arr8 = [10,20,30,40,50];
+        // console.log(arr8.fill("Patel", 2 ,4));
+        // console.log(arr8);
 
+        //Task - 24
 
+        // let arr9 = [50,40,80,70,10,60,20,30];
+        // console.log(arr9.sort());
 
+        //Task - 28
+
+        // let arr10 = [10,20,30,40,50];
+        // let arr11 = [100,200,300,400,500];
+        // console.log(arr10.concat(arr11));
+
+        //Task - 41
+
+        // let arr12 = ["Jan", "Feb", "Mar", "Apr"];
+        // console.log(arr12);
+        // console.log(arr12. toSorted());
+        // console.log(arr12);
+
+        //Task - 58
+
+        // let arr13 = [-10,50,60,-15,-20];
+        // arr13[0] = 0;
+        // arr13[3] = 0;
+        // arr13[4] = 0;
+        // console.log(arr13);
     </script>
 </body>
 </html>
