--- a/Basic-JavaScript/12-Dom/task.html
+++ b/Basic-JavaScript/12-Dom/task.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
+
 </head>
 
 <body>
     <div>
-        <input type="number" name="input1" id="input1"><br><br>
+        <input type="number" name="input1" id="input1" class="form-floating mb-3" placeholder="Enter Number"><br><br>
         <input type="number" name="input1" id="input2"><br><br>
         <button id="+" onclick="pluse()">+</button>
         <button id="-" onclick="mineus()">-</button>
@@ -20,39 +22,40 @@
 
 
     <script>
-        
+
         function pluse() {
             let num = parseFloat(document.getElementById("input1").value);
+
             let num1 = parseFloat(document.getElementById("input2").value);
             console.log(num);
             console.log(num1);
-            console.log(num+num1);
-            document.getElementById("result").value = num+num1;
+            console.log(num + num1);
+            document.getElementById("result").value = num + num1;
         }
-        
+
         function mineus() {
             let num = parseFloat(document.getElementById("input1").value);
             let num1 = parseFloat(document.getElementById("input2").value);
             console.log(num);
             console.log(num1);
-            console.log(num-num1);
-            document.getElementById("result").value = num-num1;
+            console.log(num - num1);
+            document.getElementById("result").value = num - num1;
         }
         function maltiply() {
             let num = parseFloat(document.getElementById("input1").value);
             let num1 = parseFloat(document.getElementById("input2").value);
             console.log(num);
             console.log(num1);
-            console.log(num-num1);
-            document.getElementById("result").value = num-num1;
+            console.log(num * num1);
+            document.getElementById("result").value = num * num1;
         }
         function divede() {
             let num = parseFloat(document.getElementById("input1").value);
             let num1 = parseFloat(document.getElementById("input2").value);
             console.log(num);
             console.log(num1);
-            console.log(num-num1);
-            document.getElementById("result").value = num-num1;
+            console.log(num / num1);
+            document.getElementById("result").value = num / num1;
         }
     </script>
 </body>
