--- a/Basic-JavaScript/11-Object/03ObjectEntries.html
+++ b/Basic-JavaScript/11-Object/03ObjectEntries.html
@@ -6,6 +6,15 @@
     <title>Object Entries</title>
 </head>
 <body>
-   
+   <script>
+    let arr = {
+        name: "Kavy",
+        age: 19,
+        city:"Idar"
+    }
+
+    console.log(Object.entries(arr));
+    
+   </script>
 </body>
 </html>
